5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4414/executions/1671_1101.log
== SUBMITION (2019-04-29 19:57:13) 
-- CODE:
x = float(input("Consumo de energia:"))
y = input("tipo de instalacao: R/I/C?").upper()
print("Entradas:",x,"kwh e tipo",y)
if(x<0)or not (y=="R" or y=="C" or y=="I"):
	print("Dados invalidos")
elif y == "R":
	if x<500:
		z= x*0.44
	else:
		z=x*0.65
	z= round(z, 2)
	print("Valor total: R$", z)
elif y=="C":
	if x< 1000:
		z = x*0.55
	else:
		z= x*0.60
	z= round(z, 2)
	print("valor total: R$", z)
elif y == "I":	
	if x < 5000:
		z=  x * 0.55
		else:
			z= x*0.60
		z= round(z, 2)
		print("Valor total:R$", Z)
-- EXECUTION TIME:
0.154323
-- ERROR:
  File "/home/codebench/codes/1671/1101/main.py", line 23
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:57:17) 
-- CODE:
x = float(input("Consumo de energia:"))
y = input("tipo de instalacao: R/I/C?").upper()
print("Entradas:",x,"kwh e tipo",y)
if(x<0)or not (y=="R" or y=="C" or y=="I"):
	print("Dados invalidos")
elif y == "R":
	if x<500:
		z= x*0.44
	else:
		z=x*0.65
	z= round(z, 2)
	print("Valor total: R$", z)
elif y=="C":
	if x< 1000:
		z = x*0.55
	else:
		z= x*0.60
	z= round(z, 2)
	print("valor total: R$", z)
elif y == "I":	
	if x < 5000:
		z=  x * 0.55
		else:
			z= x*0.60
		z= round(z, 2)
		print("Valor total:R$", Z)
-- EXECUTION TIME:
0.170104
-- ERROR:
  File "/home/codebench/codes/1671/1101/main.py", line 23
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:58:50) 
-- CODE:
x = float(input("Consumo de energia:"))
y = input("tipo de instalacao: R/I/C?").upper()
print("Entradas:",x,"kWh e tipo",y)
if(x<0) or not (y=="R" or y=="C" or y=="I"):
	print("Dados invalidos")
elif y == "R":
	if x<500:
		z= x*0.44
	else:
		z=x*0.65
	z= round(z, 2)
	print("Valor total: R$", z)
elif y=="C":
	if x< 1000:
		z = x*0.55
	else:
		z= x*0.60
	z= round(z, 2)
	print("valor total: R$", z)
elif y == "I":	
	if x < 5000:
		z=  x * 0.55
		else:
			z= x*0.60
		z= round(z, 2)
		print("Valor total:R$", Z)
-- EXECUTION TIME:
0.156741
-- ERROR:
  File "/home/codebench/codes/1671/1101/main.py", line 23
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:59:43) 
-- CODE:
x = float(input("Consumo de energia:"))
y = input("tipo de instalacao: R/I/C?").upper()
print("Entradas:",x,"kWh e tipo",y)
if(x<0) or not (y =="R" or y == "C" or y=="I"):
	print("Dados invalidos")
elif y == "R":
	if x < 500:
		z= x*0.44
	else:
		z=x*0.65
	z= round(z, 2)
	print("Valor total: R$", z)
elif y=="C":
	if x< 1000:
		z = x*0.55
	else:
		z= x*0.60
	z= round(z, 2)
	print("valor total: R$", z)
elif y == "I":	
	if x < 5000:
		z=  x * 0.55
		else:
			z= x*0.60
		z= round(z, 2)
		print("Valor total:R$", Z)
-- EXECUTION TIME:
0.161348
-- ERROR:
  File "/home/codebench/codes/1671/1101/main.py", line 23
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 19:59:47) 
-- CODE:
x = float(input("Consumo de energia:"))
y = input("tipo de instalacao: R/I/C?").upper()
print("Entradas:",x,"kWh e tipo",y)
if(x<0) or not (y =="R" or y == "C" or y=="I"):
	print("Dados invalidos")
elif y == "R":
	if x < 500:
		z= x*0.44
	else:
		z=x*0.65
	z= round(z, 2)
	print("Valor total: R$", z)
elif y=="C":
	if x< 1000:
		z = x*0.55
	else:
		z= x*0.60
	z= round(z, 2)
	print("valor total: R$", z)
elif y == "I":	
	if x < 5000:
		z=  x * 0.55
		else:
			z= x*0.60
		z= round(z, 2)
		print("Valor total:R$", Z)
-- EXECUTION TIME:
0.234987
-- ERROR:
  File "/home/codebench/codes/1671/1101/main.py", line 23
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 20:00:03) 
-- CODE:
x = float(input("Consumo de energia:"))
y = input("tipo de instalacao: R/I/C?").upper()
print("Entradas:",x,"kWh e tipo",y)
if(x<0) or not (y =="R" or y == "C" or y=="I"):
	print("Dados invalidos")
elif y == "R":
	if x < 500:
		z = x * 0.44
	else:
		z=x*0.65
	z= round(z, 2)
	print("Valor total: R$", z)
elif y=="C":
	if x< 1000:
		z = x*0.55
	else:
		z= x*0.60
	z= round(z, 2)
	print("valor total: R$", z)
elif y == "I":	
	if x < 5000:
		z=  x * 0.55
		else:
			z= x*0.60
		z= round(z, 2)
		print("Valor total:R$", Z)
-- EXECUTION TIME:
0.170901
-- ERROR:
  File "/home/codebench/codes/1671/1101/main.py", line 23
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 20:04:16) 
-- CODE:
x = float(input("Consumo de energia:"))
y = input("tipo de instalacao: R/I/C?").upper()
print("Entradas:",x,"kWh e tipo",y)
if(x<0) or not (y =="R" or y == "C" or y=="I"):
	print("Dados invalidos")
elif y == "R":
	if x < 500:
		z = x * 0.44
	else:
		z = x * 0.65
	z = round(z, 2)
	print("Valor total: R$", z)
elif y == "C":
	if x < 1000:
		z = x * 0.55
	else:
		z = x * 0.60
	z = round(z, 2)
	print("valor total: R$", z)
elif y == "I":	
	if x < 5000:
		z =  x * 0.55
		else:
			z = x * 0.60
		z = round(z, 2)
		print("Valor total:R$", z)
-- EXECUTION TIME:
0.193082
-- ERROR:
  File "/home/codebench/codes/1671/1101/main.py", line 23
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 20:04:21) 
-- CODE:
x = float(input("Consumo de energia:"))
y = input("tipo de instalacao: R/I/C?").upper()
print("Entradas:",x,"kWh e tipo",y)
if(x<0) or not (y =="R" or y == "C" or y=="I"):
	print("Dados invalidos")
elif y == "R":
	if x < 500:
		z = x * 0.44
	else:
		z = x * 0.65
	z = round(z, 2)
	print("Valor total: R$", z)
elif y == "C":
	if x < 1000:
		z = x * 0.55
	else:
		z = x * 0.60
	z = round(z, 2)
	print("valor total: R$", z)
elif y == "I":	
	if x < 5000:
		z =  x * 0.55
		else:
			z = x * 0.60
		z = round(z, 2)
		print("Valor total:R$", z)
-- EXECUTION TIME:
0.128411
-- ERROR:
  File "/home/codebench/codes/1671/1101/main.py", line 23
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 20:04:22) 
-- CODE:
x = float(input("Consumo de energia:"))
y = input("tipo de instalacao: R/I/C?").upper()
print("Entradas:",x,"kWh e tipo",y)
if(x<0) or not (y =="R" or y == "C" or y=="I"):
	print("Dados invalidos")
elif y == "R":
	if x < 500:
		z = x * 0.44
	else:
		z = x * 0.65
	z = round(z, 2)
	print("Valor total: R$", z)
elif y == "C":
	if x < 1000:
		z = x * 0.55
	else:
		z = x * 0.60
	z = round(z, 2)
	print("valor total: R$", z)
elif y == "I":	
	if x < 5000:
		z =  x * 0.55
		else:
			z = x * 0.60
		z = round(z, 2)
		print("Valor total:R$", z)
-- ERROR:
File "XXXX", line 23
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 20:04:41) 
-- CODE:
x = float(input("Consumo de energia:"))
y = input("tipo de instalacao: R/I/C?").upper()
print("Entradas:",x,"kWh e tipo",y)
if(x<0) or not (y =="R" or y == "C" or y=="I"):
	print("Dados invalidos")
elif y == "R":
	if x < 500:
		z = x * 0.44
	else:
		z = x * 0.65
	z = round(z, 2)
	print("Valor total: R$", z)
elif y == "C":
	if x < 1000:
		z = x * 0.55
	else:
		z = x * 0.60
	z = round(z, 2)
	print("valor total: R$", z)
elif y == "I":	
	if x < 5000:
		z =  x * 0.55
	else:
			z = x * 0.60
		z = round(z, 2)
		print("Valor total:R$", z)
-- EXECUTION TIME:
0.166401
-- ERROR:
  File "/home/codebench/codes/1671/1101/main.py", line 25
    z = round(z, 2)
                  ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 20:04:44) 
-- CODE:
x = float(input("Consumo de energia:"))
y = input("tipo de instalacao: R/I/C?").upper()
print("Entradas:",x,"kWh e tipo",y)
if(x<0) or not (y =="R" or y == "C" or y=="I"):
	print("Dados invalidos")
elif y == "R":
	if x < 500:
		z = x * 0.44
	else:
		z = x * 0.65
	z = round(z, 2)
	print("Valor total: R$", z)
elif y == "C":
	if x < 1000:
		z = x * 0.55
	else:
		z = x * 0.60
	z = round(z, 2)
	print("valor total: R$", z)
elif y == "I":	
	if x < 5000:
		z =  x * 0.55
	else:
			z = x * 0.60
		z = round(z, 2)
		print("Valor total:R$", z)
-- ERROR:
File "XXXX", line 25
    z = round(z, 2)
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 20:05:10) 
-- CODE:
x = float(input("Consumo de energia:"))
y = input("tipo de instalacao: R/I/C?").upper()
print("Entradas:",x,"kWh e tipo",y)
if(x<0) or not (y =="R" or y == "C" or y=="I"):
	print("Dados invalidos")
elif y == "R":
	if x < 500:
		z = x * 0.44
	else:
		z = x * 0.65
	z = round(z, 2)
	print("Valor total: R$", z)
elif y == "C":
	if x < 1000:
		z = x * 0.55
	else:
		z = x * 0.60
	z = round(z, 2)
	print("valor total: R$", z)
elif y == "I":	
	if x < 5000:
		z =  x * 0.55
	else:
		z = x * 0.60
	z = round(z, 2)
	print("Valor total:R$", z)
-- EXECUTION TIME:
0.312043
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
